--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "mocha --recursive tests",
+    "test-ci": "nyc mocha --colors --reporter mocha-jenkins-reporter --recursive tests",
+    "report": "nyc report --reporter=json && nyc report --reporter html && nyc report --reporter=lcov && nyc report --reporter=cobertura",
     "lint": "eslint lib tests"
   },
   "repository": {
@@ -32,6 +34,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^3.1.0",
     "mocha": "^6.2.2",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "simple-mock": "^0.8.0",
